README.md cleanup.